<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dominic.lagosdevs.ProfileDetailsActivity">

    <TextView
        android:text="@string/about_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:id="@+id/about_author" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/email"
        android:layout_below="@+id/about_author"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/facebook_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/facebook"
        android:textColorLink="#3b5998"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true" />
    <TextView
        android:text="@string/twitter_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/twitter"
        android:textColorLink="#0084b4"
        android:layout_below="@+id/facebook"
        android:layout_centerHorizontal="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/avatar"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
